# nx-events-lake

./: .editorconfig  .gitignore  404.html  Makefile  README.md  docker-compose.yml  expect-helpers.ts  gen_doc_stubs.py  go.work  go.work.sum  index.html  jest.d.ts  mkdocs.yml  nx.json  objects.inv  package-lock.json  package.json  pull_model.Dockerfile  pyproject.toml  temp.html  tsconfig.base.json
.configs/: .gitignore
.configs/ceaf/: file-downloader-config.json  file-downloader-http-gateway-job-params.json  file-downloader-output-schema.json  file-unzip-config.json  file-unzip-input-schema.json  file-unzip-output-schema.json  source-watcher-config.json  source-watcher-http-gateway-job-params.json  spark-batch-bronze-config.json  spark-batch-bronze-file-catalog.json  spark-batch-bronze-input-schema.json  spark-batch-bronze-output-schema.json
.configs/john-watson-rooney/: file-downloader-config.json  file-downloader-input-schema.json  media-transcoder-config.json  media-transcoder-input-schema.json  speech-transcriber-config.json  speech-transcriber-input-schema.json
.docker/composer/: docker-compose.back-end.yml  docker-compose.bronze-layer.yml  docker-compose.core.yml  docker-compose.dependencies.yml  docker-compose.llm.yml  docker-compose.orchestration.yml  docker-compose.raw-layer.yml
.docker/nginx/: nginx.conf
.github/workflows/: ci.yml
apps/client-layer/backend/admin-videos-catalog/: jest.config.ts  project.json  tsconfig.app.json
apps/client-layer/backend/admin-videos-catalog-e2e/: jest.config.ts  project.json  tsconfig.spec.json
apps/client-layer/spotify-integration/: README.md  project.json  pyproject.toml
apps/client-layer/spotify-integration/spotify/: main.py
apps/client-layer/streamlit-genai/: Dockerfile  README.md  project.json  pyproject.toml
apps/client-layer/streamlit-genai/envs/: .env.example
apps/client-layer/streamlit-genai/streamlit_genai/: chains.py  main.py  utils.py
apps/process-input/scheduler-handler/: README.md  project.json  pyproject.toml
apps/process-input/scheduler-handler/scheduler_handler/: hello.py
apps/process-input/scheduler-handler/tests/: test_hello.py
apps/process-input/source-watcher/: Dockerfile  README.md  docker-compose.yml  project.json  pyproject.toml
apps/process-input/source-watcher/envs/: .env.example
apps/process-input/source-watcher/source_watcher/: main.py
apps/services-bronze-layer/spark-batch/: Dockerfile  README.md  docker-compose.yml  project.json  pyproject.toml
apps/services-bronze-layer/spark-batch/envs/: .env.example
apps/services-bronze-layer/spark-batch/spark_batch_bronze/: main.py
apps/services-bronze-layer/speech-transcriber/: Dockerfile  README.md  project.json  pyproject.toml
apps/services-bronze-layer/speech-transcriber/envs/: .env.example
apps/services-bronze-layer/speech-transcriber/speech_transcriber/: main.py
apps/services-dependencies/services-proxy-handler/: go.mod  go.sum  project.json
apps/services-dependencies/services-proxy-handler/configs/: config.go
apps/services-dependencies/services-proxy-handler/test/: proxy.http
apps/services-gold-layer/document-vectorizer/: Dockerfile  README.md  project.json  pyproject.toml
apps/services-gold-layer/document-vectorizer/document_vectorizer/: main.py
apps/services-gold-layer/document-vectorizer/envs/: .env.example
apps/services-gold-layer/video-encoder/: Dockerfile  go.mod  project.json
apps/services-gold-layer/video-encoder/domain/: job.go  job_test.go  video_test.go
apps/services-orchestration/services-batch-handler/: go.mod  project.json
apps/services-orchestration/services-config-handler/: README.md  go.mod  go.sum  main.go  project.json
apps/services-orchestration/services-config-handler/configs/: config.go
apps/services-orchestration/services-config-handler/test/: config.http
apps/services-orchestration/services-definitions-handler/: go.mod  project.json
apps/services-orchestration/services-events-handler/: README.md  go.mod  go.sum  project.json
apps/services-orchestration/services-events-handler/configs/: config.go
apps/services-orchestration/services-events-handler/envs/: .env.example
apps/services-orchestration/services-file-catalog-handler/: README.md  go.mod  go.sum  project.json
apps/services-orchestration/services-file-catalog-handler/configs/: config.go
apps/services-orchestration/services-file-catalog-handler/envs/: .env.example
apps/services-orchestration/services-file-catalog-handler/test/: file-catalog.http
apps/services-orchestration/services-input-handler/: README.md  go.mod  openapi.md  project.json
apps/services-orchestration/services-input-handler/configs/: config.go
apps/services-orchestration/services-input-handler/test/: input.http
apps/services-orchestration/services-jobs-handler/: Dockerfile  go.mod  go.sum  project.json
apps/services-orchestration/services-jobs-handler/configs/: config.go
apps/services-orchestration/services-jobs-handler/envs/: .env.example
apps/services-orchestration/services-output-handler/: Dockerfile  README.md  go.mod  project.json
apps/services-orchestration/services-schema-handler/: README.md  go.mod  go.sum  project.json
apps/services-orchestration/services-staging-handler/: README.md  go.mod  go.sum  project.json
apps/services-raw-layer/file-downloader/: Dockerfile  README.md  docker-compose.yml  project.json  pyproject.toml
apps/services-raw-layer/file-unzip/: Dockerfile  README.md  go.mod  project.json
apps/services-raw-layer/media-transcoder/: Dockerfile  README.md  project.json  pyproject.toml
dependency-graph/static/: environment.js
docs/: gen_doc_stubs.py  getting-started.md  index.md  summary.md
docs/dependency-graph/static/: environment.js
docs/diagrams/: architecture copy.puml  architecture.puml
docs/diagrams/usecases/: source-watcher.puml
docs/imports/: docs-py.inv  readthedocs.inv
getting-started/: index.html
libs/nx-plugins/env-setup/: README.md  executors.json  jest.config.ts  package.json  project.json
search/: search_index.json
summary/: index.html
(+1442 files in other folders)
