[tool.poetry]
name = "nx-events-lake"
version = "0.1.0"
description = ""
authors = [ "FabioCaffarello <fabio.caffarello@gmail.com>" ]
readme = "README.md"

  [tool.poetry.dependencies]
  python = "^3.10"

    [tool.poetry.dependencies.shared-py-log]
    path = "libs/python/shared/py-log"
    develop = true

    [tool.poetry.dependencies.shared-py-serializer]
    path = "libs/python/shared/py-serializer"
    develop = true

    [tool.poetry.dependencies.shared-py-dotenv]
    path = "libs/python/shared/py-dotenv"
    develop = true

    [tool.poetry.dependencies.shared-py-request]
    path = "libs/python/shared/py-request"
    develop = true

    [tool.poetry.dependencies.shared-py-sd]
    path = "libs/python/shared/py-sd"
    develop = true

    [tool.poetry.dependencies.resources-py-rabbitmq]
    path = "libs/python/resources/py-rabbitmq"
    develop = true

    [tool.poetry.dependencies.resources-py-minio]
    path = "libs/python/resources/py-minio"
    develop = true

    [tool.poetry.dependencies.services-input-handler-dto]
    path = "libs/python/services/dtos/services-input-handler"
    develop = true

    [tool.poetry.dependencies.services-schema-handler-dto]
    path = "libs/python/services/dtos/services-schema-handler"
    develop = true

    [tool.poetry.dependencies.services-config-handler-dto]
    path = "libs/python/services/dtos/services-config-handler"
    develop = true

[tool.poetry.group.dev.dependencies]
flake8 = "6.0.0"
autopep8 = "2.0.2"
pytest = "7.3.1"
pytest-sugar = "0.9.7"
pytest-cov = "4.1.0"
pytest-html = "3.2.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.1"
mkdocs-material-extensions = "^1.2"
mkdocs-autorefs = "^0.5.0"
mkdocstrings = "^0.23.0"
mkdocstrings-python = "^1.7.0"
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-include-markdown-plugin = "^6.0.1"
mkdocs-swagger-ui-tag = "^0.6.5"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"
